WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
196948
Regression (
r244291
): Broken API Test AutoLayoutRenderingProgressRelativeOrdering
https://bugs.webkit.org/show_bug.cgi?id=196948
Summary
Regression (r244291): Broken API Test AutoLayoutRenderingProgressRelativeOrde...
Aakash Jain
Reported
2019-04-15 16:55:08 PDT
TestWebKitAPI.WebKit.AutoLayoutRenderingProgressRelativeOrdering seems to have start failing consistently recently. e.g.:
https://ews-build.webkit.org/#/builders/3/builds/588
https://ews-build.webkit.org/#/builders/3/builds/589
https://ews-build.webkit.org/#/builders/3/builds/590
Attachments
Patch
(1.40 KB, patch)
2019-04-15 19:01 PDT
,
Aakash Jain
zalan
: review+
Details
Formatted Diff
Diff
Patch
(17.31 KB, patch)
2019-04-17 15:17 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(18.19 KB, patch)
2019-04-17 20:18 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(18.21 KB, patch)
2019-04-18 09:48 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(26.42 KB, patch)
2019-04-24 15:12 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(26.39 KB, patch)
2019-04-24 15:27 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(5)
View All
Add attachment
proposed patch, testcase, etc.
Ryan Haddad
Comment 1
2019-04-15 17:02:11 PDT
Failed TestWebKitAPI.WebKit.AutoLayoutRenderingProgressRelativeOrdering /Volumes/Data/worker/macOS-High-Sierra-Release-Build-EWS/build/Tools/TestWebKitAPI/Tests/WebKitCocoa/AutoLayoutIntegration.mm:191 Value of: didInvalidateIntrinsicContentSize Actual: false Expected: true /Volumes/Data/worker/macOS-High-Sierra-Release-Build-EWS/build/Tools/TestWebKitAPI/Tests/WebKitCocoa/AutoLayoutIntegration.mm:202 Value of: didFirstLayout Actual: true Expected: false
Aakash Jain
Comment 2
2019-04-15 17:03:14 PDT
Seems like this test is catching a real failure, which was introduced today in
https://trac.webkit.org/changeset/244291
EWS indicated the failure for that patch in:
https://ews-build.webkit.org/#/builders/3/builds/578
alan
Comment 3
2019-04-15 17:14:03 PDT
r244291
potentially changed the order of incoming milestones. This test might be relying on the ordering (which it is not supposed to). Will look into this shortly.
Aakash Jain
Comment 4
2019-04-15 19:01:22 PDT
Created
attachment 367487
[details]
Patch
Aakash Jain
Comment 5
2019-04-15 19:03:45 PDT
Committed
r244322
: <
https://trac.webkit.org/changeset/244322
>
Radar WebKit Bug Importer
Comment 6
2019-04-15 19:04:18 PDT
<
rdar://problem/49927131
>
Ryan Haddad
Comment 7
2019-04-15 20:19:08 PDT
1. If a change breaks a test, we should roll it out. 2. I’m going to reopen this bug because we need to track fixing the failure somewhere.
Aakash Jain
Comment 8
2019-04-16 12:02:06 PDT
(In reply to Ryan Haddad from
comment #7
)
> 2. I’m going to reopen this bug because we need to track fixing the failure somewhere.
Agree. I wasn't planning to close it. I used webkit-patch command which automatically closed it.
Ryan Haddad
Comment 9
2019-04-16 12:55:03 PDT
(In reply to Aakash Jain from
comment #8
)
> (In reply to Ryan Haddad from
comment #7
) > > 2. I’m going to reopen this bug because we need to track fixing the failure somewhere. > Agree. I wasn't planning to close it. I used webkit-patch command which > automatically closed it.
No problem! Just didn't want it to slip through the cracks.
Ryan Haddad
Comment 10
2019-04-17 09:30:26 PDT
Alan, do we have a fix for this or should we just roll out the breaking change?
alan
Comment 11
2019-04-17 09:31:12 PDT
(In reply to Ryan Haddad from
comment #10
)
> Alan, do we have a fix for this or should we just roll out the breaking > change?
We do have a fix for this and will most likely be landing it today.
alan
Comment 12
2019-04-17 15:17:18 PDT
Created
attachment 367685
[details]
Patch
alan
Comment 13
2019-04-17 15:17:31 PDT
WIP ^^
alan
Comment 14
2019-04-17 20:18:05 PDT
Created
attachment 367715
[details]
Patch
alan
Comment 15
2019-04-18 09:48:56 PDT
Created
attachment 367732
[details]
Patch
WebKit Commit Bot
Comment 16
2019-04-18 14:13:04 PDT
Comment on
attachment 367732
[details]
Patch Clearing flags on attachment: 367732 Committed
r244434
: <
https://trac.webkit.org/changeset/244434
>
WebKit Commit Bot
Comment 17
2019-04-18 14:13:06 PDT
All reviewed patches have been landed. Closing bug.
Aakash Jain
Comment 18
2019-04-18 14:58:49 PDT
> Committed
r244434
: <
https://trac.webkit.org/changeset/244434
>
Seems like it broke another API Test: WebKit.AutoLayoutIntegration
https://ews-build.webkit.org/#/builders/3/builds/743
alan
Comment 19
2019-04-18 15:00:02 PDT
(In reply to Aakash Jain from
comment #18
)
> > Committed
r244434
: <
https://trac.webkit.org/changeset/244434
> > Seems like it broke another API Test: WebKit.AutoLayoutIntegration >
https://ews-build.webkit.org/#/builders/3/builds/743
:( most likely that test needs fixing too.
Aakash Jain
Comment 20
2019-04-18 19:20:23 PDT
> :( most likely that test needs fixing too.
ok. Test failures makes EWS slow (since EWS has to re-run the tests, and then compile clean tree and re-run treats on clean tree, to ensure that the failures are not flaky or pre-existing). Can we either fix this test quickly or roll out the commit?
WebKit Commit Bot
Comment 21
2019-04-18 19:23:03 PDT
Re-opened since this is blocked by
bug 197089
Alexey Proskuryakov
Comment 22
2019-04-22 09:23:15 PDT
What is the current status here? Has the fix been rolled back for breaking another test, so we are back to having AutoLayoutRenderingProgressRelativeOrdering fail?
alan
Comment 23
2019-04-22 09:24:39 PDT
(In reply to Alexey Proskuryakov from
comment #22
)
> What is the current status here? Has the fix been rolled back for breaking > another test, so we are back to having > AutoLayoutRenderingProgressRelativeOrdering fail?
Correct.
alan
Comment 24
2019-04-24 15:12:32 PDT
Created
attachment 368187
[details]
Patch
Tim Horton
Comment 25
2019-04-24 15:15:47 PDT
Comment on
attachment 368187
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=368187&action=review
> Source/WebKit/WebProcess/WebPage/WebPage.cpp:6244 > + // Ensure we never send DidFirstLayout milestone withouth updating the intrinsic size.
withouth
alan
Comment 26
2019-04-24 15:27:34 PDT
Created
attachment 368191
[details]
Patch
WebKit Commit Bot
Comment 27
2019-04-24 19:17:56 PDT
Comment on
attachment 368191
[details]
Patch Clearing flags on attachment: 368191 Committed
r244633
: <
https://trac.webkit.org/changeset/244633
>
WebKit Commit Bot
Comment 28
2019-04-24 19:17:58 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug