Source/WebKit/UIProcess/mac/TiledCoreAnimationDrawingAreaProxy.h
@@ -60,7 +60,6 @@ private:
 
     // Message handlers.
     void didUpdateGeometry() override;
-    void intrinsicContentSizeDidChange(const WebCore::IntSize&) override;
 
     void sendUpdateGeometry();
 
