Source/WebKit/WebProcess/WebPage/mac/TiledCoreAnimationDrawingArea.h
@@ -121,7 +121,6 @@ private:
     WebCore::TiledBacking* mainFrameTiledBacking() const;
     void updateDebugInfoLayer(bool showLayer);
 
-    void updateIntrinsicContentSizeIfNeeded();
     void updateScrolledExposedRect();
     void scaleViewToFitDocumentIfNeeded();
 
@@ -149,8 +148,6 @@ private:
 
     WebCore::IntSize m_lastViewSizeForScaleToFit;
     WebCore::IntSize m_lastDocumentSizeForScaleToFit;
-
-    WebCore::IntSize m_lastSentIntrinsicContentSize;
 
     double m_transientZoomScale { 1 };
     WebCore::FloatPoint m_transientZoomOrigin;
